# schemas

./: .gitmodules  CMakeLists.txt  README.md  serializers.h
.github/workflows/: dry_generation.yaml  generation.yaml
inc/configs/: car_config.h  session_config.h  telemetry_config.h
proto/actions/: command.proto  file_transaction.proto
proto/app/: app_config.proto  user_data.proto
proto/can/: can_frequencies.proto  can_networks.proto
proto/configs/: car_config.proto  session_config.proto  telemetry_config.proto
proto/handcart/: settings.proto
proto/influxlogger/: configuration.proto
proto/lapcounter/: circuit.proto  lapcounter.proto  laps.proto  race.proto
proto/telemetry/: csv_parser_config.proto  error.proto  login_data.proto  statistics.proto  status.proto
proto/tpms/: rtl433_payload.proto
schemas/: Aero.schema.json  CanDevice.schema.json  CarConfig.schema.json  Connection.schema.json  ConnectionSettings.schema.json  Damper.schema.json  GpsDevice.schema.json  SessionConfig.schema.json  TelemetryConfig.schema.json  Weather.schema.json  Wheel.schema.json
src/configs/: car_config.cpp  session_config.cpp  telemetry_config.cpp
telemetry/: app_config.proto  bar.proto  foo.proto
